[package]
name = "kanidm_oauth2_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
actix-files = "0.6"
serde_json = "1.0"
serde = { version="1.0", features = ["derive"]}
oauth2 = "4.2"
log = "0.4"
config = "0.13"
