[package]
name = "kanidm_oauth2_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2", default_features = false, features = ["cookies", "secure-cookies", "macros"] }
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
serde_json = "1.0"
serde = { version="1.0", features = ["derive"]}
oauth2 = { version = "4.2", feature = ["reqwest"]}
log = "0.4"
config = "0.13"
env_logger = "0.9"
async-session = "3.0"
futures-util = "0.3.24"
actix-identity = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }

